add: 추상 클래스

--- a/자바 기초.md
+++ b/자바 기초.md
@@ -191,6 +191,60 @@ Dogs can walk and run
 - [다이나믹 메소드 디스패치(Dynamic Method Dispatch)](https://velog.io/@dion/%EB%B0%B1%EA%B8%B0%EC%84%A0%EB%8B%98-%EC%98%A8%EB%9D%BC%EC%9D%B8-%EC%8A%A4%ED%84%B0%EB%94%94-6%EC%A3%BC%EC%B0%A8-%EC%83%81%EC%86%8D#%EB%8B%A4%EC%9D%B4%EB%82%98%EB%AF%B9-%EB%A9%94%EC%86%8C%EB%93%9C-%EB%94%94%EC%8A%A4%ED%8C%A8%EC%B9%98dynamic-method-dispatch)
 
 ## 추상 클래스
+> 추상클래스란 구체적이지 않은 클래스라고 한다.
+
+### 추상 클래스 정의하기
+- 추상 클래스는 클래스 앞에 abstract 키워드를 이용해서 정의한다.
+- 추상 클래스는 미완성의 추상 메소드를 포함할 수 있다.
+	- 추상 메소드란, 내용이 없는 메소드이다. 즉, 구현이 되지 않은 메소드이다.
+	- 추상 메소드는 리턴 타입 앞에 abstract라는 키워드를 붙여야한다.
+- 추상 클래스는 인스턴스를 생성할 수 없다.
+
+```java
+public abstract class Bird{
+	public abstract void sing();
+	
+	public void fly(){
+		System.out.println("날다.");
+	}
+}
+```
+### 추상 클래스를 상속받는 클래스 생성하기
+- 추상 클래스를 상속받은 클래스는 추상 클래스가 갖고 있는 추상 메소드를 반드시 구현해야 한다.
+- 추상 클래스를 상속받고, 추상 클래스가 갖고 있는 추상 메소드를 구현하지 않으면 해당 클래스도 추상 클래스가 된다.
+	- 서브 클래스도 abstract로 선언해야 함
+
+```java
+public class Duck extends Bird{
+	@Override
+	public void sing(){
+		System.out.println("꽥꽥!);
+	}
+}
+```
+
+### 사용하기
+- Bird는 추상 클래스이므로 객체를 생성할 수 없다.
+```java
+public class DuckExam{
+	public static void main(String[] args){
+		Duck duck = new Duck();
+		duck.sing();
+		duck.fly();
+	}
+}
+```
+### 추상 클래스의 용도
+- 설계와 구현 분리
+	- 슈퍼 클래스에서는 개념 정의
+		- 서브 클래스마다 다른 구현이 필요한 메소드는 추상 메소드로 선언
+	- 각 서브 클래스에서 구체적 행위 구현
+		- 서브 클래스마다 목적에 맞게 추상 메소드 다르게 구현
+- 계층적 상속 관계를 갖는 클래스 구조를 만들 때
+
+### Reference
+[추상클래스](https://programmers.co.kr/learn/courses/5/lessons/188)
+
 ## final 키워드
 ### final 변수
 ## Object 클래스
