--- a/자바 기초.md
+++ b/자바 기초.md
@@ -246,5 +246,81 @@ public class DuckExam{
 [추상클래스](https://programmers.co.kr/learn/courses/5/lessons/188)
 
 ## final 키워드
+> final의 의미는 최종적이란 뜻을 가지고 있다. final 필드는 초기값이 저장되면 최종적인 값이 되어 프로그램 실행 도중에 수정을 할 수 없다.
+
 ### final 변수
+```java
+public class Fruit{
+	static final int COUNT = 10;
+	static final double PI = 3.14;
+
+	public static void main(String[] args){
+		//TODO
+	}
+}
+```
+- 상수라고도 불린다.
+- 변수를 선언과 동시에 초기화하며 이후에 값을 수정할 수 없다.
+- 오직 get만 가능하다.
+
+### final 메소드
+```java
+public class Fruit{
+	public String name;
+
+	public void setName(String name){
+		this.name = name;
+	}
+
+	public final String getName(){
+		return name;
+	}
+}
+
+public class Banana extends Fruit{
+
+	@Override
+	public void setName(String name){
+		this.name = "Fruit Name : " + name;
+	}
+
+	public String getName(){
+		return name;
+	}
+
+	public static void main(String[] args){
+		//TODO
+	}
+}
+```
+- 오버라이딩(Overriding)이 불가능하다.
+- 상속 받은 그대로 사용해야 한다.
+
+### final 클래스
+```java
+public final class Fruit{
+	public String name;
+
+	public void setName(String name){
+		this.name = name;
+	}
+
+	public final String getName(){
+		return name;
+	}
+}
+
+public class Banana extends Fruit{
+	
+	public static void main(String[] args){
+		//TODO
+	}
+}
+```
+- 상속이 불가능하다.
+- 서브 클래스를 만들 수 없다.
+
+### Reference
+[Java final 키워드](https://library1008.tistory.com/1)
+
 ## Object 클래스
