--- a/자바 기초.md
+++ b/자바 기초.md
@@ -284,6 +284,7 @@ public class Banana extends Fruit{
 		this.name = "Fruit Name : " + name;
 	}
 
+	//메소드 오버라이딩 불가능
 	public String getName(){
 		return name;
 	}
@@ -310,17 +311,53 @@ public final class Fruit{
 	}
 }
 
-public class Banana extends Fruit{
-	
-	public static void main(String[] args){
-		//TODO
-	}
+//상속 불가능
+public class Banana extends Fruit{ 
+
 }
 ```
 - 상속이 불가능하다.
 - 서브 클래스를 만들 수 없다.
 
+### 메소드의 인자값에 final을 사용하는 경우
+```java
+class Company{
+	String name = "회사명"
+
+	public void setName(final String name){
+		this.name = name;
+	}
+}
+```
+- final 인자값의 변경이 불가능하다.
+
+### final 객체
+```java
+class Company{
+	String name = "회사명"
+
+	public void setName(String name){
+		this.name = name;
+	}
+
+	public void getName(){
+		return name;
+	}
+}
+
+public class FinalExam{
+	public static void main(String[] args){
+		final Company company = new Company();
+		//company = new Company(); //객체를 한 번 생성했다면 재생성 불가능
+		company.setName("ex회사"); //클래스의 필드는 변경 가능
+	}
+}
+```
+- 한번 생성된 final 객체는 같은 타입으로 재생성이 불가능하다.
+- 객체 자체는 변경이 불가능하지만 객체 내부 변수는 변경 가능하다.
+
 ### Reference
 [Java final 키워드](https://library1008.tistory.com/1)
+[[Java] 자바 상수 final의 의미와 사용법](https://coding-factory.tistory.com/525)
 
 ## Object 클래스
