docs: Reference 마크다운 변경

--- a/자바 기초.md
+++ b/자바 기초.md
@@ -357,7 +357,7 @@ public class FinalExam{
 - 객체 자체는 변경이 불가능하지만 객체 내부 변수는 변경 가능하다.
 
 ### Reference
-[Java final 키워드](https://library1008.tistory.com/1)
-[[Java] 자바 상수 final의 의미와 사용법](https://coding-factory.tistory.com/525)
+- [Java final 키워드](https://library1008.tistory.com/1)
+- [[Java] 자바 상수 final의 의미와 사용법](https://coding-factory.tistory.com/525)
 
 ## Object 클래스
