--- a/자바 기초.md
+++ b/자바 기초.md
@@ -361,3 +361,33 @@ public class FinalExam{
 - [[Java] 자바 상수 final의 의미와 사용법](https://coding-factory.tistory.com/525)
 
 ## Object 클래스
+> java.lang.Object 클래스는 자바 API의 모든 클래스와 사용자가 정의한 모든 클래스의 최상위 클래스이다. 즉, 모든 자바 클래스들은 Object 클래스로부터 상속받는다.
+
+### Object 클래스의 주요 메소드
+|메소드|설명|
+|:---:|:---:|
+|boolean equals(Object obj)|두 개의 객체가 같은지 비교하여 같으면 true를, 같지 않으면 false를 반환한다.|
+|String toString()|현재 객체의 문자열을 반환한다.|
+|protected Object clone()|객체를 복사한다.|
+|protected void finalize()|가비지 컬렉션 직전에 객체의 리소스를 정리할 때 호출한다.|
+|Class getClass()|객체의 클래스형을 반환한다.|
+|int hashCode()|객체의 코드값을 반환한다.|
+|void notifyAll()|wait된 모든 스레드 실행을 재개할 때 호출한다.|
+|void wait()|스레드를 일시적으로 중지할 때 호출한다.|
+|void wait(long timeout)|주어진 시간만큼 스레드를 일시적으로 중지할 때 호출한다.|
+|void wait(long timeout, int nanos)|주어진 시간만큼 스레드를 일시적으로 중지할 때 호출한다.|
+
+- 사용자가 클래스를 정의할 때 선언부에 명시적으로 extends java.lang.Object를 지정하지 않아도 자동으로 상속받게 된다.
+- 즉, Object 클래스의 모든 메소드와 변수는 다른 모든 클래스에서도 사용 가능하다.
+
+### finalize()의 문제
+> finalize()는 GC가 발생하여 현재 객체가 사라지기 전에 호출되는 메소드이다. 하지만 문제가 있으므로 사용하지 않는 것이 권장된다.
+1. 언제 실행될지 알 수 없다. 실행 보장 불가.
+2. 성능 저하
+3. 예외 발생 시 무시
+	- 보통 예외가 발생하면 stack trace가 출력되지만, finalize내에선 무시되고 처리한다.
+
+
+### Reference
+- [[JAVA] Object 클래스 정리](https://hyeonstorage.tistory.com/178)
+- [finalize 이슈](https://sjh836.tistory.com/144)
