--- a/자바기초.md
+++ b/자바기초.md
@@ -2,7 +2,7 @@
 ## CQRS
 > CQRS는 Command and Query Responsibility Segregation(명령과 조회의 책임 분리)을 나타낸다. 이름처럼 시스템에서 명령을 처리하는 책임과 조회를 처리하는 책임을 분리하는 것이 CQRS의 핵심이다.
 
-![CQRS](https://blog.nebrass.fr/wp-content/uploads/cqrs-simple-diagram-886x1024.png)
+<img src = "https://blog.nebrass.fr/wp-content/uploads/cqrs-simple-diagram-886x1024.png" height="500">
 
 - 명령(Command) : 시스템의 상태를 변경하는 작업
 	- ex) 주문 취소, 배송 완료
