--- a/8주차과제/자바기초.md
+++ b/8주차과제/자바기초.md
@@ -80,3 +80,67 @@ CQRS에서는 일반적으로 Guid를 엔터티 식별자로 사용한다.
 - 구현해야 할 코드가 많아진다.
 - 더 많은 구현 기술이 필요해진다.
 - 유지 비용이 증가한다.
+
+## 디미터 법칙
+> Object-Oriented Programming:An Objective Sense of Style 에서 처음 소개된 개념
+> <br> 객체 간 관계를 설정할 때 객체 간의 결합도를 효과적으로 낮출 수 있다.
+> <br> 객체 구조의 경로를 따라 멀리 떨어져 있는 낯선 객체에 메시지를 보내는 설계를 피하라는 것이다.
+> <br> Don't Talk to Strangers
+
+```
+public class Post {
+    private final List<Comment> comments;
+
+    public Post(List<Comment> comments) {
+        this.comments = comments;
+    }
+
+    public List<Comment> getComments() {
+        return comments;
+    }
+}
+```
+```
+public class Board {
+    private final List<Post> posts;
+
+    public Board(List<Post> posts) {
+        this.posts = posts;
+    }
+
+    public void addComment(int postId, String content) {
+        posts.get(postId).getComments().add(new Comment(content));
+    }
+    ...
+}
+```
+addComment 메소드를 보면 Board 객체의 인스턴스 변수 posts 에서 getter를 거듭하여 객체 Comment를 추가하는 코드이다.  
+이렇게 getter가 계속 이어지는 코드는 디미터 법칙을 위반하는 코드이다.  
+
+만약 Post객체에서 인스턴스 변수가 List<Comment> comments에서 Comments라는 일급컬렉션 객체로 수정된다면 getter을 통해 List<Comment> comments를 사용하던 Board 객체의 addComment 메서드가 깨지게 된다.  
+
+디미터 법칙에서는 노출 범위를 제한하기 위해
+- 객체 자신의 메소드를
+- 메소드의 파라미터로 넘어온 객체들의 메소드들
+- 메소드 내부에서 생성, 초기화 된 객체의 메소드들
+- 인스턴스 변수로 가지고 있는 객체가 소유한 메소드들  
+
+에 해당하는 메소드를 호출해야 한다고 한다.
+
+```
+class Demeter {
+    private Member member;
+
+    public myMethod(OtherObject other) {
+        // ...
+    }
+
+    public okLawOfDemeter(Paramemter param) {
+        myMethod();     // 1. 객체 자신의 메서드
+        param.paramMethod();    // 2. 메서드의 파라미터로 넘어온 객체들의 메서드
+        Local local = new Local();
+        local.localMethod();    // 3. 메서드 내부에서 생성, 초기화된 객체의 메서드
+        member.memberMethod();   // 4. 인스턴스 변수로 가지고 있는 객체가 소유한 메서드
+    }
+}
+```
