feat: 일급컬렉션 내용 정리

--- a/8주차과제/자바기초.md
+++ b/8주차과제/자바기초.md
@@ -144,3 +144,73 @@ class Demeter {
     }
 }
 ```
+
+## 일급 컬렉션
+> 콜렉션을 Wrapping 하면서, 그 외 다른 멤버 변수가 없는 상태
+
+이 코드를
+```
+Map<String, String> map = new HashMap<>();
+map.put("1", "A");
+map.put("2", "B");
+map.put("3", "C");
+```
+아래와 같이 wrapping 하는 것
+```
+public class GameRanking {
+
+    private Map<String, String> ranks;
+
+    public GameRanking(Map<String, String> ranks) {
+        this.ranks = ranks;
+    }
+}
+```
+
+다른 예시
+```
+public class Car {
+    private int position;
+    
+    public void move(MovingStrategy movingStrategy){
+        if(movingStrategy.isMove()){
+        position++;
+        }
+    }
+    
+    public int getPosition() {
+    return position;
+    }
+}
+```
+```
+Car a = new Car();
+Car b = new Car();
+Car c = new Car();
+```
+
+일급컬렉션인 Cars 클래스로 함께 관리
+```
+public class Cars{
+
+    private List<Car> cars;
+    
+    public Cars(List<Car> cars){
+    this.cars=this.cars;
+    }
+    
+    public List<Car> getCars(){
+    return cars;
+    }
+
+}
+```
+
+### 일급 컬렉션의 이점
+1. 비지니스에 종속적인 자료구조
+2. Collection의 불변성을 보장
+3. 상태와 행위를 한 곳에서 관리
+4. 이름이 있는 컬렉션
+
+
+
