feat: Stream 특징 정리

--- a/자바기초.md
+++ b/자바기초.md
@@ -29,4 +29,74 @@ TreeMap: 키 값이 자연 순서 대로 오름차수 정렬 되어 Key-Value쌍
 HashTable: HashMap보다는 느리지만 동기화 지원, Value에 Null값 허용X
 
 
+## Stream의 특징 정리 (map,filter,sorted,distinct,limit,foreach)
+```
+ArrayList<string> list = new ArrayList<>(Arrays.asList("Apple","Banana","Apple",Melon","Grape","Strawberry"));
+```
+
+### map
+> 요소들을 특정조건에 해당하는 값으로 변환
+> <br> 요소들을 대,소문자 변형 등 작업 시 사용
+
+```
+list.stream().map(s->s.toUpperCase());
+list.stream().map(String::toUpperCase);
+```
+이후 collect를 통해 결과를 리턴 받을 수 있다. forEach를 통해 바로 출력도 가능하다.
+```
+System.out.println(list.stream().map(s->s.toUpperCase()).collect(Collectors.toList())); //[APPLE, BANANA, APPLE, MELON, GRAPE, STRAWBERRY]
+```
+### filter
+> 요소들을 조건에 따라 걸러내는 작업
+> <br> 길이 제한, 특정문자 포함 등 작업 시 사용
+
+```
+list.stream().filter(t->t.length()>5)
+```
+요소 크기가 5보다 큰 것만 걸러내 준다.
+```
+System.out.println(list.stream().filter(t->t.length()>5).collect(Collectors.toList())); //[Banana, Strawberry]
+```
+### sorted
+> 요소들을 정렬해주는 작업
+```
+list.stream().sorted()
+```
+리스트의 요소를 정렬해준다.
+```
+System.out.println(list.stream().sorted().collect(Collectors.toList())); //[Apple, Apple, Banana, Grape, Melon, Strawberry] 
+```
+### discinct
+> 요소의 중복을 제거해주는 작업
+```
+list.stream().distinct()
+```
+리스트의 중복을 제거해준다.
+```
+list.stream().distinct().forEach(System.out.println);
+// Apple
+// Banana
+// Melon
+// Grape
+// Strawberry
+```
+### limit
+> 어떤 스트림에서 일정 개수만큼 가져와 새로운 스트림을 리턴해주는 작업
+```
+list.stream.limit(3).forEach(System.out.println);
+// Apple
+// Banana
+// Apple
+```
+### foreach
+> 요소들을 하나씩 출력하는 작업
+```
+list.stream.forEach(System.out.println);
+// Apple
+// Banana
+// Apple
+// Melon
+// Grape
+// Strawberry
+```
 
