feat: Collection과 Stream의 foreach 차이 정리

--- a/자바기초.md
+++ b/자바기초.md
@@ -100,3 +100,39 @@ list.stream.forEach(System.out.println);
 // Strawberry
 ```
 
+## Collection.forEach와 Stream.forEach 차이
+### Stream 객체 사용 여부
+Collection.forEach의 경우에는 따로 객체를 생성하지 않고 메소드를 호출한다.<br>
+반면에 Stream.forEach는 stream()으로 Stream 객체를 생성해야만 메소드를 호출할 수 있다.
+
+```
+list.forEach(System.out::println);
+list.stream().forEach(Systmem.out::println);
+```
+
+### Parallel Stream
+```
+public void print() { List<Integer> nums = Arrays.asList(1, 2, 3, 4, 5);
+    System.out.println("Collection.forEach 출력 시작");
+    nums.forEach(System.out::println);
+    System.out.println("Stream.forEach 출력 시작");
+    nums.parallelStream().forEach(System.out::println); }
+//Collection.forEach 출력 시작
+//1
+//2
+//3
+//4
+//5
+//Stream.forEach 출력 시작
+//3
+//4
+//1
+//5
+//2
+
+출처: https://dundung.tistory.com/247 [DunDung]
+```
+ParallelStream으로 생성한 스트림 객체는 여러 스레드에서 스트림을 실행하기에 실행순서가 예측 불가능한 반면 Collection.forEach는 일정한 순서를 보장한다.
+
+
+
