feat: for문을 stream으로 변환

--- a/자바기초.md
+++ b/자바기초.md
@@ -134,5 +134,33 @@ public void print() { List<Integer> nums = Arrays.asList(1, 2, 3, 4, 5);
 ```
 ParallelStream으로 생성한 스트림 객체는 여러 스레드에서 스트림을 실행하기에 실행순서가 예측 불가능한 반면 Collection.forEach는 일정한 순서를 보장한다.
 
+## for문을 stream으로 변환하는 법
 
+```
+List<String> list1= Arrays.asList("a", "b", "c", "d", "e");
+List<String> list2 = Arrays.asList("a", "b", "d");
+
+//for문 사용해 같은 것만 List에 담으려면
+
+List<String> result1 = new ArrayList<>();
+    for(String str1 : list1){
+        for(String str2 : list2){
+            if(str1.equals(str2)){
+                result1.add(str1);
+            }
+        }
+    }
+    for(String str : result1){
+        System.out.print(str);
+    }
+
+// stream 이용해 같은 것만 List에 담으려면
+ List<String> result2 =
+    list1.stream()
+        .filter(str -> list2.stream().anyMatch(Predicate.isEqual(str)))
+        .collect(Collectors.toList());
+
+    result2.stream().forEach(System.out::print);
+
+```
 
